# yellow-mug

./: CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md
.github/workflows/: pages.yml
src/: app.ixx  core.ixx  main.cpp  nodes.ixx  processors.ixx
src/core/: frame.ixx
src/nodes/: blur.ixx  crop.ixx  grayscale.ixx  invert.ixx  mask_blend.ixx  processor.ixx  source.ixx  target.ixx
src/processors/: blur.ixx  crop.ixx  grayscale.ixx  invert.ixx  mask_blend.ixx  processor.ixx  source.ixx
src/utility/: stb_image.ixx
uml/: class_diagram.mmd  config.json
